ECHEL-14/token rotation API
