# pkg/delta/routes/users/users.go
@@ -20,6 +20,7 @@ func RegisterRoutes(r *gin.RouterGroup, db *database.Database) {
 	{
 		userRoutes.POST("/users", create)
 		userRoutes.POST("/auth/session/login", login)
+		userRoutes.GET("/users/refresh", refresh)
 		userRoutes.GET("/users/:id", fetch)
 		userRoutes.POST("/users/verify", verifyOTP) // OTP Verification Endpoint
 	}
